--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@ function openWin() {
 <div class="header">
 <center><img src="img/logo.png" style weight="80px" height="80px"><font size="16px">3M MORTGAGE CORP.</font></center>
 
-  <h2>The best is not yet to come...</h2>
+  <h2>The best is yet to come...</h2>
 </div>
 
 <div class="topnav">
