--- a/index.html
+++ b/index.html
@@ -117,9 +117,8 @@ function openWin() {
 <body>
 
 <div class="header">
-<center><img src="img/logo.png" style weight="80px" height="80px"><font size="16px">3M MORTGAGE CORP.</font></center>
+<center><img src="img/rma.png" style weight="150px" height="150px"></center>
 
-  <h2>The best is yet to come...</h2>
 </div>
 
 <div class="topnav">
