--- a/index.html
+++ b/index.html
@@ -122,12 +122,12 @@ function openWin() {
 </div>
 
 <div class="topnav">
-  <a href="pdf/rma.pdf" target="blank">MORTGAGE APPLICATION</a>
-    <a href="html/calc.html" target="blank">MORTGAGE CALCULATORS</a>
-  <a href="html/lawyer.html" target="blank">REAL ESTATE LAWYERS</a>
-  <a href="html/insurance.html" target="blank">HOME INSURANCE</a>
-  <a href="html/inspection.html" target="blank">HOME INSPECTION</a>
-  <a href="https://www.google.com/search?safe=strict&source=hp&ei=eSRSXoC8JMTs_QbqwJiAAw&q=3m+mortgage+services+corp&oq=3m+mortga&gs_l=psy-ab.1.1.0l2j0i22i30l2j38.1726.4953..6593...0.0..0.96.734.9......0....1..gws-wiz.......0i131.FeGeBzkpwMA#lrd=0x882b32117625c239:0x83064663ec050f10,1,,," target="blank">GOOGLE REVIEWS</a>
+  <a onclick="openWin()" href="pdf/rma.pdf" target="blank">MORTGAGE APPLICATION</a>
+  <a onclick="openWin()" href="html/calc.html" target="blank">MORTGAGE CALCULATORS</a>
+  <a onclick="openWin()" href="html/lawyer.html" target="blank">REAL ESTATE LAWYERS</a>
+  <a onclick="openWin()" href="html/insurance.html" target="blank">HOME INSURANCE</a>
+  <a onclick="openWin()" href="html/inspection.html" target="blank">HOME INSPECTION</a>
+  <a onclick="openWin()" href="https://www.google.com/search?safe=strict&source=hp&ei=eSRSXoC8JMTs_QbqwJiAAw&q=3m+mortgage+services+corp&oq=3m+mortga&gs_l=psy-ab.1.1.0l2j0i22i30l2j38.1726.4953..6593...0.0..0.96.734.9......0....1..gws-wiz.......0i131.FeGeBzkpwMA#lrd=0x882b32117625c239:0x83064663ec050f10,1,,," target="blank">GOOGLE REVIEWS</a>
   <a onclick="openWin()" href="html/contact.html" target="blank">CONTACT</a>
  
 </div>
