--- a/index.html
+++ b/index.html
@@ -107,10 +107,53 @@ body {
   }
 }
 </style>
+ 
  <script>
 var myWindow;
 function openWin() {
   myWindow = window.open(href="html/contact.html", "", "width=420, height=525");
+}
+</script>
+ 
+  <script>
+var myWindow;
+function openWin1() {
+  myWindow = window.open(href="href="https://www.google.com/search?safe=strict&source=hp&ei=eSRSXoC8JMTs_QbqwJiAAw&q=3m+mortgage+services+corp&oq=3m+mortga&gs_l=psy-ab.1.1.0l2j0i22i30l2j38.1726.4953..6593...0.0..0.96.734.9......0....1..gws-wiz.......0i131.FeGeBzkpwMA#lrd=0x882b32117625c239:0x83064663ec050f10,1,,,", "", "width=420, height=525");
+}
+</script>
+ 
+ <script>
+var myWindow;
+function openWin2() {
+  myWindow = window.open(href="html/inspection.html", "", "width=420, height=525");
+}
+</script>
+ 
+  <script>
+var myWindow;
+function openWin3() {
+  myWindow = window.open(href="html/insurance.html", "", "width=420, height=525");
+}
+</script>
+ 
+  <script>
+var myWindow;
+function openWin4() {
+  myWindow = window.open(href="html/lawyer.html", "", "width=420, height=525");
+}
+</script>
+ 
+  <script>
+var myWindow;
+function openWin5() {
+  myWindow = window.open(href="html/calc.html", "", "width=420, height=525");
+}
+</script>
+ 
+  <script>
+var myWindow;
+function openWin6() {
+  myWindow = window.open(href="pdf/rma.pdf", "", "width=420, height=525");
 }
 </script>
 </head>
@@ -122,12 +165,12 @@ function openWin() {
 </div>
 
 <div class="topnav">
-  <a onclick="openWin()" href="pdf/rma.pdf" target="blank">MORTGAGE APPLICATION</a>
-  <a onclick="openWin()" href="html/calc.html" target="blank">MORTGAGE CALCULATORS</a>
-  <a onclick="openWin()" href="html/lawyer.html" target="blank">REAL ESTATE LAWYERS</a>
-  <a onclick="openWin()" href="html/insurance.html" target="blank">HOME INSURANCE</a>
-  <a onclick="openWin()" href="html/inspection.html" target="blank">HOME INSPECTION</a>
-  <a onclick="openWin()" href="https://www.google.com/search?safe=strict&source=hp&ei=eSRSXoC8JMTs_QbqwJiAAw&q=3m+mortgage+services+corp&oq=3m+mortga&gs_l=psy-ab.1.1.0l2j0i22i30l2j38.1726.4953..6593...0.0..0.96.734.9......0....1..gws-wiz.......0i131.FeGeBzkpwMA#lrd=0x882b32117625c239:0x83064663ec050f10,1,,," target="blank">GOOGLE REVIEWS</a>
+  <a onclick="openWin6()" href="pdf/rma.pdf" target="blank">MORTGAGE APPLICATION</a>
+  <a onclick="openWin5()" href="html/calc.html" target="blank">MORTGAGE CALCULATORS</a>
+  <a onclick="openWin4()" href="html/lawyer.html" target="blank">REAL ESTATE LAWYERS</a>
+  <a onclick="openWin3()" href="html/insurance.html" target="blank">HOME INSURANCE</a>
+  <a onclick="openWin2()" href="html/inspection.html" target="blank">HOME INSPECTION</a>
+  <a onclick="openWin1()" href="https://www.google.com/search?safe=strict&source=hp&ei=eSRSXoC8JMTs_QbqwJiAAw&q=3m+mortgage+services+corp&oq=3m+mortga&gs_l=psy-ab.1.1.0l2j0i22i30l2j38.1726.4953..6593...0.0..0.96.734.9......0....1..gws-wiz.......0i131.FeGeBzkpwMA#lrd=0x882b32117625c239:0x83064663ec050f10,1,,," target="blank">GOOGLE REVIEWS</a>
   <a onclick="openWin()" href="html/contact.html" target="blank">CONTACT</a>
  
 </div>
